Refactor TransactionService and add IT tests